# BadgerFrotz

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/: advent.h  embed.pl  zork1.h  zork2.h  zork3.h
elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
exe/: BadgerFrotz.code-workspace  CMakeLists.txt  Makefile  advent.h  art.h  badgerfrotz.cpp  binaries.h  blorb.h  blorblib.cpp  buffer.cpp  cmake_install.cmake  dumb_blorb.cpp  dumb_blorb.h  dumb_frotz.h  dumb_init.cpp  dumb_input.cpp  dumb_output.cpp  dumb_pic.cpp  err.cpp  fastmem.cpp  files.cpp  font.h  frotz.h  hsync.pio  input.cpp  main.cpp  mound.cpp  process.cpp  quetzal.cpp  rgb.pio  scancodes.h  screen.cpp  setup.h  stream.cpp  text.cpp  variable.cpp  vsync.pio  zork1.h  zork2.h  zork3.h
exe/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
exe/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
